# lem-in

./: .gitignore  72insteadof67.txt  CMakeLists.txt  Makefile  README.md  Untitled  author  checker.c  checker.h  cpy_the_state.c  cpy_the_state_2.c  draw_circle.c  find_the_ways.c  find_way.h  finding.h  free_structs.c  free_structs_2.c  graph.txt  helper.c  helper.h  helper_2.c  helper_to_a.c  helper_to_b.c  helper_ways.c  lem-in  lem_in.h  lem_structs.h  link_breaker.c  link_breaker_2.c  make_clean_list.c  more_than_needed.txt  moving_ants.c  moving_ants_2.c  parcer.c  parcer.h  parser.c  parser.h  parser_2.c  parser_3.c  rec_finding.c  (+27 more)
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_hm_wrd.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isintnumber.c  ft_isprint.c  ft_itoa.c  ft_latoi.c  ft_lentill.c  ft_lstadd.c  ft_lstaddnext.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstnew_addr.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  (+29 more)
libft/ft_printf/: Makefile  double_rep.c  ft_printf.h  ft_sprintf.c
libft/includes/: libft.h
minilibx/: mlx_shaders.c
vis/: visualizer.c  visualizer.h  visualizer_2.c  visualizer_3.c
