cmake_minimum_required(VERSION 3.14)
project(lem_in C)

set(CMAKE_C_STANDARD 11)

include_directories(.)
include_directories(libft)
include_directories(libft/ft_printf)

add_executable(lem_in
        libft/ft_printf/add_fnctns.c
        libft/ft_printf/apply_flags.c
        libft/ft_printf/double_rep.c
        libft/ft_printf/format_float.c
        libft/ft_printf/formats_c_s.c
        libft/ft_printf/formats_int.c
        libft/ft_printf/ft_fdprintf.c
        libft/ft_printf/ft_printf.c
        libft/ft_printf/ft_printf.h
        libft/ft_printf/ft_sprintf.c
        libft/ft_printf/lib_printf.c
        libft/ft_printf/pft_float_itoa.c
        libft/ft_printf/pft_float_itoa_2.c
        libft/ft_printf/pft_float_itoa_3.c
        libft/ft_printf/pft_itoa.c
        libft/ft_printf/pft_unsigned_itoa.c
        libft/ft_printf/set_format.c
        libft/ft_abs.c
        libft/ft_arrjoin.c
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_dlladdnextl.c
        libft/ft_dlladdnextr.c
        libft/ft_dlladdtoleft.c
        libft/ft_dlladdtoright.c
        libft/ft_dllccount.c
        libft/ft_dllcpy.c
        libft/ft_dllcpyl.c
        libft/ft_dllcpyr.c
        libft/ft_dlldel.c
        libft/ft_dlldelone.c
        libft/ft_dlldeltoleft.c
        libft/ft_dlldeltoright.c
        libft/ft_dlllcount.c
        libft/ft_dllnew.c
        libft/ft_dllrcount.c
        libft/ft_dllswap.c
        libft/ft_hm_wrd.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_latoi.c
        libft/ft_lstadd.c
        libft/ft_lstaddnext.c
        libft/ft_lstcount.c
        libft/ft_lstcpy.c
        libft/ft_lstdel.c
        libft/ft_lstdelfirst.c
        libft/ft_lstdelone.c
        libft/ft_lstfree.c
        libft/ft_lstiter.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstswap.c
        libft/ft_memalloc.c
        libft/ft_memccpy.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memdel.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_nstrjoin.c
        libft/ft_order.c
        libft/ft_putchar.c
        libft/ft_putchar_fd.c
        libft/ft_putendl.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr.c
        libft/ft_putstr_fd.c
        libft/ft_strcat.c
        libft/ft_strchr.c
        libft/ft_strclr.c
        libft/ft_strcmp.c
        libft/ft_strcpy.c
        libft/ft_strdel.c
        libft/ft_strdup.c
        libft/ft_strequ.c
        libft/ft_striter.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strlcat.c
        libft/ft_strlen.c
        libft/ft_strmap.c
        libft/ft_strmapi.c
        libft/ft_strncat.c
        libft/ft_strncmp.c
        libft/ft_strncpy.c
        libft/ft_strnequ.c
        libft/ft_strnew.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strsplit.c
        libft/ft_strsplitspaces.c
        libft/ft_strstr.c
        libft/ft_strsub.c
        libft/ft_strtrim.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/get_next_line.c
        libft/get_next_line.h
        libft/libft.h
        find_the_ways.c
        finding.h
        helper.c
        parser.c
        parser.h)
